@@ -5,6 +5,9 @@
 	* src/bubblegen.c (bubble_content_left): Align left-handed text
 	content correctly.
 
+	* src/xcowsay.c (main): Fix bug with absolute dream image
+	paths. Use realpath(3) to get canonical path.
+
 2010-10-23  Nick Gasson  <nick@nickg.me.uk>
 
 	* src/bubblegen.c (bubble_init): Add a function to generate
